clean the training file

--- a/Notebooks/test_train_model.ipynb
+++ b/Notebooks/test_train_model.ipynb
@@ -3,192 +3,235 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "933f005c",
+   "id": "72786dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import time\n",
+    "\n",
+    "# Navigate to the parent directory of the project structure\n",
+    "project_dir = os.path.abspath(os.path.join(os.getcwd(), '../'))\n",
+    "src_dir = os.path.join(project_dir, 'src')\n",
+    "data_dir = os.path.join(project_dir, 'data')\n",
+    "fig_dir = os.path.join(project_dir, 'fig')\n",
+    "logs_dir = os.path.join(project_dir, 'logs')\n",
+    "os.makedirs(fig_dir, exist_ok=True)\n",
+    "os.makedirs(data_dir, exist_ok=True)\n",
+    "os.makedirs(logs_dir, exist_ok=True)\n",
+    "\n",
+    "# Add the src directory to sys.path\n",
+    "sys.path.append(src_dir)\n",
+    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "71c091bd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "============================================================\n",
-      "Environment Check\n",
-      "============================================================\n",
-      "\n",
-      "Python executable: /tmp/python-venv/lra_venv/bin/python\n",
-      "Python version: 3.9.25 (main, Nov  3 2025, 22:33:05) \n",
-      "[GCC 11.2.0]\n",
-      "\n",
-      "CUDA_HOME: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cuda-11.7.0-iyx5xnjk3fbe2fqhogxbzfzpj7xhi77t\n",
-      "CUDNNROOT: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cudnn-8.5.0.96-11.7-k7jh7qvot2tupopuooyvp2hlkss75nhc\n",
-      "\n",
-      "LD_LIBRARY_PATH (first 300 chars):\n",
-      "  /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cudnn-8.5.0.96-11.7-k7jh7qvot2tupopuooyvp2hlkss75nhc/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cuda-11.7.0-iyx5xnjk3fbe2fqhogxbzfzpj7xhi77t/lib64:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64...\n",
-      "\n",
-      "============================================================\n",
-      "Library Check\n",
-      "============================================================\n",
-      "  ✅ CUDA Runtime: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cuda-11.7.0-iyx5xnjk3fbe2fqhogxbzfzpj7xhi77t/lib64/libcudart.so\n",
-      "  ✅ cuDNN: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cudnn-8.5.0.96-11.7-k7jh7qvot2tupopuooyvp2hlkss75nhc/lib/libcudnn.so\n",
-      "  ✅ cuBLAS: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cuda-11.7.0-iyx5xnjk3fbe2fqhogxbzfzpj7xhi77t/lib64/libcublas.so\n",
-      "  ✅ cuFFT: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/cuda-11.7.0-iyx5xnjk3fbe2fqhogxbzfzpj7xhi77t/lib64/libcufft.so\n",
-      "\n",
-      "============================================================\n",
-      "TensorFlow GPU Detection\n",
-      "============================================================\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-05 08:23:54.065374: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-05 08:23:54.122327: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2026-01-05 10:53:54.388927: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2026-01-05 10:53:54.445151: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-05 08:23:54.985511: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2026-01-05 10:53:55.233175: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/tmp/python-venv/lra_venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "TensorFlow version: 2.13.0\n",
-      "\n",
-      "All physical devices:\n",
-      "  - PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')\n",
-      "  - PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')\n",
-      "\n",
-      "GPU devices: 1\n",
-      "✅ GPU is available!\n",
-      "  GPU 0: PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')\n",
-      "    Details: {'compute_capability': (7, 0), 'device_name': 'Tesla V100-PCIE-16GB'}\n",
-      "\n",
-      "============================================================\n",
-      "GPU Test\n",
-      "============================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2026-01-05 08:23:56.669151: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1639] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 14728 MB memory:  -> device: 0, name: Tesla V100-PCIE-16GB, pci bus id: 0000:3b:00.0, compute capability: 7.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ GPU computation test successful!\n",
-      "   Result: [[1. 3.]\n",
-      " [3. 7.]]\n"
+      "Deleting run 0 that did not complete.\n",
+      "Creating experiment directory: /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-0_2\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "import sys\n",
-    "\n",
-    "print(\"=\" * 60)\n",
-    "print(\"Environment Check\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "# Check environment variables\n",
-    "print(f\"\\nPython executable: {sys.executable}\")\n",
-    "print(f\"Python version: {sys.version}\")\n",
-    "\n",
-    "print(f\"\\nCUDA_HOME: {os.environ.get('CUDA_HOME', 'NOT SET')}\")\n",
-    "print(f\"CUDNNROOT: {os.environ.get('CUDNNROOT', 'NOT SET')}\")\n",
-    "\n",
-    "ld_path = os.environ.get('LD_LIBRARY_PATH', 'NOT SET')\n",
-    "print(f\"\\nLD_LIBRARY_PATH (first 300 chars):\")\n",
-    "print(f\"  {ld_path[:300]}...\")\n",
-    "\n",
-    "# Check if CUDA libraries are accessible\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"Library Check\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "import ctypes.util\n",
-    "import glob\n",
-    "\n",
-    "libs_to_check = {\n",
-    "    'libcudart': 'CUDA Runtime',\n",
-    "    'libcudnn': 'cuDNN',\n",
-    "    'libcublas': 'cuBLAS',\n",
-    "    'libcufft': 'cuFFT',\n",
-    "}\n",
-    "\n",
-    "for lib_name, lib_desc in libs_to_check.items():\n",
-    "    # Try to find library\n",
-    "    found_paths = []\n",
-    "    if 'LD_LIBRARY_PATH' in os.environ:\n",
-    "        for path in os.environ['LD_LIBRARY_PATH'].split(':'):\n",
-    "            if path:\n",
-    "                matches = glob.glob(f\"{path}/{lib_name}.so*\")\n",
-    "                if matches:\n",
-    "                    found_paths.extend(matches)\n",
-    "    \n",
-    "    if found_paths:\n",
-    "        print(f\"  ✅ {lib_desc}: {found_paths[0]}\")\n",
-    "    else:\n",
-    "        # Try ctypes\n",
-    "        lib_path = ctypes.util.find_library(lib_name)\n",
-    "        if lib_path:\n",
-    "            print(f\"  ✅ {lib_desc}: {lib_path}\")\n",
-    "        else:\n",
-    "            print(f\"  ❌ {lib_desc}: NOT FOUND\")\n",
-    "\n",
-    "# Test TensorFlow\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"TensorFlow GPU Detection\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
+    "import shutil\n",
+    "import json\n",
+    "import time\n",
     "import tensorflow as tf\n",
+    "from objax.util import EasyDict\n",
+    "from absl import flags\n",
     "\n",
-    "print(f\"\\nTensorFlow version: {tf.__version__}\")\n",
+    "# Define flags that train.py uses (normally defined in if __name__ == '__main__')\n",
+    "flags.DEFINE_string('arch', 'cnn32-3-mean', 'Model architecture.')\n",
+    "flags.DEFINE_float('lr', 0.1, 'Learning rate.')\n",
+    "flags.DEFINE_string('dataset', 'cifar10', 'Dataset.')\n",
+    "flags.DEFINE_float('weight_decay', 0.0005, 'Weight decay ratio.')\n",
+    "flags.DEFINE_integer('batch', 256, 'Batch size')\n",
+    "flags.DEFINE_integer('epochs', 501, 'Training duration in number of epochs.')\n",
+    "flags.DEFINE_string('logdir', 'experiments', 'Directory where to save checkpoints and tensorboard data.')\n",
+    "flags.DEFINE_integer('seed', None, 'Training seed.')\n",
+    "flags.DEFINE_float('pkeep', .5, 'Probability to keep examples.')\n",
+    "flags.DEFINE_integer('expid', None, 'Experiment ID')\n",
+    "flags.DEFINE_integer('num_experiments', None, 'Number of experiments')\n",
+    "flags.DEFINE_string('augment', 'weak', 'Strong or weak augmentation')\n",
+    "flags.DEFINE_integer('only_subset', None, 'Only train on a subset of images.')\n",
+    "flags.DEFINE_integer('dataset_size', 50000, 'number of examples to keep.')\n",
+    "flags.DEFINE_integer('eval_steps', 1, 'how often to get eval accuracy.')\n",
+    "flags.DEFINE_integer('abort_after_epoch', None, 'stop trainin early at an epoch')\n",
+    "flags.DEFINE_integer('save_steps', 10, 'how often to get save model.')\n",
+    "flags.DEFINE_integer('patience', None, 'Early stopping after this many epochs without progress')\n",
+    "flags.DEFINE_bool('tunename', False, 'Use tune name?')\n",
     "\n",
-    "# List all physical devices\n",
-    "print(\"\\nAll physical devices:\")\n",
-    "all_devices = tf.config.list_physical_devices()\n",
-    "for device in all_devices:\n",
-    "    print(f\"  - {device}\")\n",
     "\n",
-    "# Check GPU devices specifically\n",
-    "gpus = tf.config.list_physical_devices('GPU')\n",
-    "print(f\"\\nGPU devices: {len(gpus)}\")\n",
-    "if len(gpus) > 0:\n",
-    "    print(\"✅ GPU is available!\")\n",
-    "    for i, gpu in enumerate(gpus):\n",
-    "        print(f\"  GPU {i}: {gpu}\")\n",
-    "        # Try to get GPU details\n",
-    "        try:\n",
-    "            gpu_details = tf.config.experimental.get_device_details(gpu)\n",
-    "            print(f\"    Details: {gpu_details}\")\n",
-    "        except:\n",
-    "            pass\n",
+    "from train import get_data, network, MemModule\n",
+    "\n",
+    "FLAGS = flags.FLAGS\n",
+    "\n",
+    "# Parse flags (required before accessing FLAGS values)\n",
+    "# Mark flags as parsed so we can access them without command-line args\n",
+    "FLAGS.mark_as_parsed()\n",
+    "\n",
+    "# ============================================================================\n",
+    "# Training Parameters - Set these directly\n",
+    "# ============================================================================\n",
+    "# Dataset and architecture\n",
+    "dataset = 'cifar10'\n",
+    "arch = 'wrn28-2'\n",
+    "\n",
+    "# Training configuration\n",
+    "epochs = 2\n",
+    "save_steps = 20\n",
+    "batch = 256\n",
+    "lr = 0.1\n",
+    "weight_decay = 0.0005\n",
+    "augment = 'weak'\n",
+    "pkeep = 0.5\n",
+    "\n",
+    "# Experiment configuration\n",
+    "expid = 0\n",
+    "num_experiments = 2\n",
+    "seed = None  # Will be auto-generated if None\n",
+    "\n",
+    "# Optional parameters\n",
+    "only_subset = None\n",
+    "patience = None\n",
+    "dataset_size = 1024\n",
+    "eval_steps = 1\n",
+    "tunename = False\n",
+    "\n",
+    "# ============================================================================\n",
+    "# Training Logic (from train.py main function)\n",
+    "# ============================================================================\n",
+    "\n",
+    "# Disable GPU for TensorFlow (JAX will handle GPU)\n",
+    "tf.config.experimental.set_visible_devices([], \"GPU\")\n",
+    "\n",
+    "# Set seed\n",
+    "if seed is None:\n",
+    "    seed = np.random.randint(0, 1000000000)\n",
+    "    seed ^= int(time.time())\n",
+    "\n",
+    "# Create args dictionary\n",
+    "args = EasyDict(\n",
+    "    arch=arch,\n",
+    "    lr=lr,\n",
+    "    batch=batch,\n",
+    "    weight_decay=weight_decay,\n",
+    "    augment=augment,\n",
+    "    seed=seed\n",
+    ")\n",
+    "\n",
+    "assert expid is not None and num_experiments is not None\n",
+    "\n",
+    "base_logdir = os.path.join(logs_dir, 'exp', 'cifar10')\n",
+    "os.makedirs(base_logdir, exist_ok=True)\n",
+    "\n",
+    "logdir_path = f\"experiment-{expid}_{num_experiments}\"\n",
+    "logdir_path = os.path.join(base_logdir, logdir_path)\n",
+    "\n",
+    "if os.path.exists(os.path.join(logdir_path, \"ckpt\", f\"{epochs:010d}.npz\")):\n",
+    "    print(f\"Run {expid} already completed.\")\n",
     "else:\n",
-    "    print(\"❌ No GPU devices detected\")\n",
-    "    print(\"\\nTroubleshooting:\")\n",
-    "    print(\"  1. Check if wrapper script is being used (check ~/.jupyter/kernel_wrapper_debug.log)\")\n",
-    "    print(\"  2. Verify LD_LIBRARY_PATH includes CUDA libraries\")\n",
-    "    print(\"  3. Make sure TensorFlow module is loaded\")\n",
-    "    print(\"  4. Try: import tensorflow as tf; print(tf.config.list_physical_devices())\")\n",
+    "    if os.path.exists(logdir_path):\n",
+    "        print(f\"Deleting run {expid} that did not complete.\")\n",
+    "        shutil.rmtree(logdir_path)\n",
+    "    \n",
+    "    print(f\"Creating experiment directory: {logdir_path}\")\n",
+    "    os.makedirs(logdir_path, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bf02737c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "No checkpoints found. Skipping restoring variables.\n",
+      "Epoch 0001  Loss 2.38  Accuracy 10.01\n",
+      "Epoch 0002  Loss 2.20  Accuracy 12.65\n",
+      "--------------------------------------------------------------------------------\n",
+      "✅ Training completed! Results saved to /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-0_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set FLAGS for get_data function and train method (they use FLAGS internally)\n",
+    "FLAGS.logdir = logs_dir  \n",
+    "FLAGS.dataset = dataset\n",
+    "FLAGS.num_experiments = num_experiments\n",
+    "FLAGS.expid = expid\n",
+    "FLAGS.pkeep = pkeep\n",
+    "FLAGS.only_subset = only_subset\n",
+    "FLAGS.augment = augment\n",
+    "FLAGS.batch = batch\n",
+    "FLAGS.dataset_size = dataset_size\n",
     "\n",
-    "# Test GPU computation if available\n",
-    "if len(gpus) > 0:\n",
-    "    print(\"\\n\" + \"=\" * 60)\n",
-    "    print(\"GPU Test\")\n",
-    "    print(\"=\" * 60)\n",
-    "    try:\n",
-    "        with tf.device('/GPU:0'):\n",
-    "            a = tf.constant([[1.0, 2.0], [3.0, 4.0]])\n",
-    "            b = tf.constant([[1.0, 1.0], [0.0, 1.0]])\n",
-    "            c = tf.matmul(a, b)\n",
-    "            print(f\"✅ GPU computation test successful!\")\n",
-    "            print(f\"   Result: {c.numpy()}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ GPU computation test failed: {e}\")"
+    "# Get data - pass FLAGS explicitly\n",
+    "train_data, test_data, xs, ys, keep, nclass = get_data(seed, FLAGS)\n",
+    "\n",
+    "# Define the network and training module\n",
+    "tm = MemModule(\n",
+    "    network(arch), \n",
+    "    nclass=nclass,\n",
+    "    mnist=(dataset == 'mnist'),\n",
+    "    epochs=epochs,\n",
+    "    expid=expid,\n",
+    "    num_experiments=num_experiments,\n",
+    "    pkeep=pkeep,\n",
+    "    save_steps=save_steps,\n",
+    "    only_subset=only_subset,\n",
+    "    **args\n",
+    ")\n",
+    "\n",
+    "# Save hyperparameters\n",
+    "params = {}\n",
+    "params.update(tm.params)\n",
+    "\n",
+    "with open(os.path.join(logdir_path, 'hparams.json'), 'w') as f:\n",
+    "    json.dump(params, f)\n",
+    "np.save(os.path.join(logdir_path, 'keep.npy'), keep)\n",
+    "\n",
+    "# Train\n",
+    "print(\"-\" * 80)\n",
+    "tm.train(epochs, len(xs), train_data, test_data, logdir_path,\n",
+    "            save_steps=save_steps, patience=patience, eval_steps=eval_steps)\n",
+    "\n",
+    "print(\"-\" * 80)\n",
+    "print(f\"✅ Training completed! Results saved to {logdir_path}\")\n"
    ]
   }
  ],
