start to clean the training procedure

--- a/Notebooks/test_train_model.ipynb
+++ b/Notebooks/test_train_model.ipynb
@@ -37,10 +37,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-05 10:53:54.388927: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-05 10:53:54.445151: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2026-01-05 11:25:05.381325: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2026-01-05 11:25:05.437148: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-05 10:53:55.233175: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2026-01-05 11:25:06.230247: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/tmp/python-venv/lra_venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bf02737c",
    "metadata": {},
    "outputs": [
@@ -181,27 +181,30 @@
      "text": [
       "--------------------------------------------------------------------------------\n",
       "No checkpoints found. Skipping restoring variables.\n",
-      "Epoch 0001  Loss 2.38  Accuracy 10.01\n",
-      "Epoch 0002  Loss 2.20  Accuracy 12.65\n",
+      "Epoch 0001  Loss 2.37  Accuracy 8.93\n",
+      "Epoch 0002  Loss 2.20  Accuracy 14.52\n",
       "--------------------------------------------------------------------------------\n",
       "✅ Training completed! Results saved to /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-0_2\n"
      ]
     }
    ],
    "source": [
-    "# Set FLAGS for get_data function and train method (they use FLAGS internally)\n",
-    "FLAGS.logdir = logs_dir  \n",
-    "FLAGS.dataset = dataset\n",
-    "FLAGS.num_experiments = num_experiments\n",
-    "FLAGS.expid = expid\n",
-    "FLAGS.pkeep = pkeep\n",
-    "FLAGS.only_subset = only_subset\n",
-    "FLAGS.augment = augment\n",
-    "FLAGS.batch = batch\n",
-    "FLAGS.dataset_size = dataset_size\n",
+    "# Create configuration dictionary for get_data\n",
+    "config = {\n",
+    "    'logdir': logs_dir,\n",
+    "    'dataset': dataset,\n",
+    "    'dataset_size': dataset_size,\n",
+    "    'num_experiments': num_experiments,\n",
+    "    'expid': expid,\n",
+    "    'pkeep': pkeep,\n",
+    "    'only_subset': only_subset,\n",
+    "    'augment': augment,\n",
+    "    'batch': batch,\n",
+    "    'data_dir': data_dir\n",
+    "}\n",
     "\n",
-    "# Get data - pass FLAGS explicitly\n",
-    "train_data, test_data, xs, ys, keep, nclass = get_data(seed, FLAGS)\n",
+    "# Get data - pass config dictionary\n",
+    "train_data, test_data, xs, ys, keep, nclass = get_data(seed, config)\n",
     "\n",
     "# Define the network and training module\n",
     "tm = MemModule(\n",
