--- a/Notebooks/functionality_check/test_train_model.ipynb
+++ b/Notebooks/functionality_check/test_train_model.ipynb
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-05 11:42:57.957431: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-05 11:42:58.013456: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2026-01-05 11:45:43.650040: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2026-01-05 11:45:43.705720: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-05 11:42:58.852017: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2026-01-05 11:45:44.545785: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/tmp/python-venv/lra_venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bf02737c",
    "metadata": {},
    "outputs": [
@@ -142,18 +142,6 @@
      "output_type": "stream",
      "text": [
       "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------------------------------------\n",
-      "No checkpoints found. Skipping restoring variables.\n",
-      "Epoch 0001  Loss 2.37  Accuracy 10.75\n",
-      "Epoch 0002  Loss 2.18  Accuracy 14.79\n",
-      "--------------------------------------------------------------------------------\n",
-      "✅ Training completed! Results saved to /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-0_2\n"
      ]
     }
    ],
@@ -173,22 +161,134 @@
     "    **train_config\n",
     ")\n",
     "\n",
-    "# Save hyperparameters\n",
-    "params = {}\n",
-    "params.update(tm.params)\n",
+    "# # Save hyperparameters\n",
+    "# params = {}\n",
+    "# params.update(tm.params)\n",
     "\n",
-    "with open(os.path.join(logdir_path, 'hparams.json'), 'w') as f:\n",
-    "    json.dump(params, f)\n",
-    "np.save(os.path.join(logdir_path, 'keep.npy'), keep)\n",
+    "# with open(os.path.join(logdir_path, 'hparams.json'), 'w') as f:\n",
+    "#     json.dump(params, f)\n",
+    "# np.save(os.path.join(logdir_path, 'keep.npy'), keep)\n",
     "\n",
-    "# Train\n",
-    "print(\"-\" * 80)\n",
-    "tm.train(epochs, len(xs), train_data, test_data, logdir_path,\n",
-    "            save_steps=save_steps, patience=patience, eval_steps=eval_steps)\n",
+    "# # Train\n",
+    "# print(\"-\" * 80)\n",
+    "# tm.train(epochs, len(xs), train_data, test_data, logdir_path,\n",
+    "#             save_steps=save_steps, patience=patience, eval_steps=eval_steps)\n",
     "\n",
-    "print(\"-\" * 80)\n",
-    "print(f\"✅ Training completed! Results saved to {logdir_path}\")\n"
+    "# print(\"-\" * 80)\n",
+    "# print(f\"✅ Training completed! Results saved to {logdir_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "742bc5ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "JAX GPU Detection\n",
+      "============================================================\n",
+      "\n",
+      "JAX version: 0.4.13\n",
+      "\n",
+      "All JAX devices: [CpuDevice(id=0)]\n",
+      "\n",
+      "Device count: 1\n",
+      "Local device count: 1\n",
+      "\n",
+      "GPU devices: 0\n",
+      "❌ No GPU devices detected\n",
+      "\n",
+      "============================================================\n",
+      "Environment Variables\n",
+      "============================================================\n",
+      "CUDA_VISIBLE_DEVICES: NOT SET\n",
+      "XLA_PYTHON_CLIENT_PREALLOCATE: NOT SET\n",
+      "\n",
+      "============================================================\n",
+      "GPU Computation Test\n",
+      "============================================================\n",
+      "⚠️  Running on CPU (no GPU available)\n",
+      "   CPU computation: [5. 7. 9.]\n",
+      "   Device: TFRT_CPU_0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Minimal JAX GPU Check\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import os\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"JAX GPU Detection\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Check JAX version\n",
+    "print(f\"\\nJAX version: {jax.__version__}\")\n",
+    "\n",
+    "# List all devices\n",
+    "print(f\"\\nAll JAX devices: {jax.devices()}\")\n",
+    "\n",
+    "# Count devices by type\n",
+    "print(f\"\\nDevice count: {jax.device_count()}\")\n",
+    "print(f\"Local device count: {jax.local_device_count()}\")\n",
+    "\n",
+    "# Check for GPU specifically\n",
+    "gpu_devices = [d for d in jax.devices() if d.device_kind == 'gpu']\n",
+    "print(f\"\\nGPU devices: {len(gpu_devices)}\")\n",
+    "if len(gpu_devices) > 0:\n",
+    "    print(\"✅ GPU is available!\")\n",
+    "    for i, device in enumerate(gpu_devices):\n",
+    "        print(f\"  GPU {i}: {device}\")\n",
+    "else:\n",
+    "    print(\"❌ No GPU devices detected\")\n",
+    "\n",
+    "# Check environment variables\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"Environment Variables\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"CUDA_VISIBLE_DEVICES: {os.environ.get('CUDA_VISIBLE_DEVICES', 'NOT SET')}\")\n",
+    "print(f\"XLA_PYTHON_CLIENT_PREALLOCATE: {os.environ.get('XLA_PYTHON_CLIENT_PREALLOCATE', 'NOT SET')}\")\n",
+    "\n",
+    "# Try a simple computation\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"GPU Computation Test\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "if len(gpu_devices) > 0:\n",
+    "    try:\n",
+    "        # Create arrays on GPU\n",
+    "        x = jnp.array([1.0, 2.0, 3.0])\n",
+    "        y = jnp.array([4.0, 5.0, 6.0])\n",
+    "        z = x + y\n",
+    "        \n",
+    "        print(f\"✅ GPU computation successful!\")\n",
+    "        print(f\"   Input x: {x}\")\n",
+    "        print(f\"   Input y: {y}\")\n",
+    "        print(f\"   Result z: {z}\")\n",
+    "        print(f\"   Device: {z.device()}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ GPU computation failed: {e}\")\n",
+    "else:\n",
+    "    print(\"⚠️  Running on CPU (no GPU available)\")\n",
+    "    x = jnp.array([1.0, 2.0, 3.0])\n",
+    "    y = jnp.array([4.0, 5.0, 6.0])\n",
+    "    z = x + y\n",
+    "    print(f\"   CPU computation: {z}\")\n",
+    "    print(f\"   Device: {z.device()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c364d22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -196,18 +296,6 @@
    "display_name": "Python (lra-env)",
    "language": "python",
    "name": "lra-env"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.25"
   }
  },
  "nbformat": 4,
